<resources>
    <string name="app_name">Journal</string>
    <string name="more">More</string>
    <string name="gallery">Gallery</string>
    <string name="add">Add</string>
    <string name="calendar">Calendar</string>
  <string name="entry_title">Journal Entry</string>
    <string name="details">Details</string>
  <string name="address">Address</string>
  <string name="save">SAVE</string>
  <string name="add_image">Add image</string>
  <string name="pick_time">Choose Date</string>
  <string name="fill_required_entry">Please fill title and details of the Entry.</string>
  <string name="delete">Delete</string>
  <string name="add_entry">Add Entry</string>
  <string name="cannot_delete_entry">Entry is not yet saved.</string>
</resources>
